# DisCoTec

./: .autotools  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  ATTRIBUTION  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GENE-GUI.py  INSTALL  INSTRUCTIONS  Makefile  README.md  SConstruct  adjust_examples.py  compile.sh  get_mpich.sh  input.txt  linkscan  makefile  module.sh  newprob  paper.bib  paper.md  readme.md  recompile.bat  setup.py  ss  test_scheme.json
distributedcombigrid/: CMakeLists.txt  README.md  SConscript
distributedcombigrid/examples/: CMakeLists.txt
distributedcombigrid/tests/: CMakeLists.txt  TaskConst.hpp  TaskConstParaboloid.hpp  TaskCount.hpp  TaskInterpolateWave.hpp  run_third_level_test.sh  slurm_submit_test.sh  test_adaptive.cpp  test_adaptivecombischeme.cpp  test_distributedcombigrid.cpp  test_distributedfullgrid.cpp  test_distributedsparsegrid.cpp  test_ftolerance.cpp  test_fullgrid.cpp  test_hello.cpp  test_helper.hpp  test_hierarchization.cpp  test_integration.cpp  test_loadmodel.cpp  test_manager.cpp  test_managerSendRecv.cpp  test_mpisystem.cpp  test_networkutils.cpp  test_reduce.cpp  test_rescheduling.cpp  test_staticcombischeme.cpp  test_stats.cpp  test_task.cpp  test_thirdLevel.cpp
distributedcombigrid/third_level_manager/: CMakeLists.txt  Makefile  Makefile.template  Params.cpp  Params.hpp  Stats.hpp  System.cpp  System.hpp  compile_commands.json  example.ini  extract_broker_times.py  run.sh  speed_test_uftp_broker.sh  test_uftp.cpp  test_uftp_broker.sh  thirdLevelManager.cpp  thirdLevelManager.hpp
distributedcombigrid/tools/: .gitignore  CMakeLists.txt  errorCalc.cpp  generate_combischeme_json.py  hierachizetime.py  plot.py  raw_to_image.py  stats.py  visualize_sg_minmax.py
examples/: CMakeLists.txt  new_gd_folder.sh
examples/combi_example/: .gitignore  CMakeLists.txt  README.md  TaskExample.hpp  combi_example.cpp  ctparam  plot_times.sh  run.sh
examples/combi_example_faults/: .gitignore  CMakeLists.txt  HelperFunctions.hpp  README.md  TaskExample.hpp  combi_example_faults.cpp  ctparam  run.sh  setpath.sample  test_ft_sim.cpp  test_ft_sim_2.cpp  test_ft_sim_3.cpp  test_ft_sim_4.cpp
examples/combi_workers_only/: .gitignore  CMakeLists.txt  README.md  combi_example_worker_only.cpp  ctparam  run.sh  scheme_6.06_GiB.json
examples/distributed_advection/: .gitignore  CMakeLists.txt  Makefile.template  README.md  TaskAdvection.hpp  advection_example.cpp  combi_example.cpp  ctparam  generate_test_folders_and_submit.sh  get_mc_variance.cpp  output_to_error_csv.py  plot_error_advection.py
examples/distributed_third_level/: .gitignore  CMakeLists.txt  Makefile.template  README.md  TaskAdvection.hpp  TaskConst.hpp  TaskConstParaboloid.hpp  combi_example.cpp  combi_example_manager_only.cpp  combi_example_worker_only.cpp  ctparam_2D  ctparam_2D_system1  ctparam_tl_system0  ctparam_tl_system1  ctscheme_tl_system_1.json  get_mc_variance.cpp  mpimemory.cpp  run.sh  scheme_2D_7-7_conjoint.sizes  scheme_2D_7-7_split1_00006groups.json  scheme_2D_7-7_split1_6groups.sizes  scheme_2D_7-7_split2_00001groups.json  scheme_2D_7-7_split2_1groups.sizes
examples/gene_distributed/: .gitignore  Makefile.template  README  preproc.py  run_components.py  run_intervall.py  run_list.py  testParallelizations.sh
examples/gene_distributed_linear/: Makefile.template  ctparam  run.sh
examples/selalib_distributed/: .gitignore  CMakeLists.txt  README.md  ctparam  plot_selalib_diagnostics.py  sbatch.sh
src/: BGP_personality_check.c  BandedMatrix.F90  BandedMatrix.h  BoundaryDescription.F90  CMakeLists.txt  FR_perf.F90  Gyro_LES.F90  ListObject.F90  ListObjectTemplate.f90  Matrix_Vector.F90  PlotFileWriter.cpp  RK_coefficients.F90  Task.cpp  Vector.F90  adiabatic_response.F90  all_rhs_terms.F90  antenna.F90  arrays.F90  aux_fields.F90  aux_func.F90  axpy.F90  blockindex.F90  boundary.F90  boundary_exchange_general.F90  boundary_exchange_vw.F90  boundary_exchange_x.F90  boundary_exchange_z.F90  box_data_module.F90  c_fourier_fftw.c  c_nonlinearity.c  c_utils.c  calc_rhs.F90  charge_curr_dens.F90  chease.F90  check_parameters.F90  checkpoint.F90  circular.F90  collisions.F90  comm.F90  compute_dt.F90  (+163 more)
src/combicom/: CombiCom.hpp
src/combischeme/: CombiMinMaxScheme.cpp  CombiMinMaxScheme.hpp  CombiThirdLevelScheme.cpp  CombiThirdLevelScheme.hpp
tests/: .gitignore  CMakeLists.txt  TaskConst.hpp  TaskConstParaboloid.hpp  TaskCount.hpp  run_valgrind.sh  slurm_submit_test.sh  test_distributedcombigrid.cpp  test_distributedfullgrid.cpp  test_distributedsparsegrid.cpp  test_ftolerance.cpp  test_fullgrid.cpp  test_helper.hpp  test_hierarchization.cpp  test_integration.cpp  test_io.cpp  test_loadmodel.cpp  test_mpisystem.cpp  test_networkutils.cpp  test_reduce.cpp  test_rescheduling.cpp  test_scheme.json  test_stats.cpp  test_task.cpp  test_tensor.cpp  test_thirdLevel.cpp  test_worker_only.cpp  valgrind_suppressions.txt
third_level_manager/: .gitignore  CMakeLists.txt  Params.hpp  README.md  Stats.cpp  System.hpp  compress_and_copy.sh  copy multiple ng.sh  copy multiple_judac.sh  copy_file_from_hawk_to_ng.sh  copy_file_from_hawk_to_ng_parallel.sh  copy_file_from_judac_to_ng_parallel.sh  copy_file_from_ng_to_hawk.sh  copy_file_from_ng_to_hawk_parallel.sh  copy_file_from_ng_to_judac_parallel.sh  copy_multiple_judac.sh  copy_multiple_ng.sh  decompress.sh  extract_broker_times.py  ng_uftp_sim.sh  run.sh  test_uftp.cpp  thirdLevelManager.cpp  thirdLevelManager.hpp
tools/: AutoparFile.py  CMakeLists.txt  Globalprofiles.mw  Makefile  Normalize.mw  add2scanlog  analyze_perfopt.py  diffnrg  effplot  errorCalc.cpp  evaluate.py  example-times.json  extract_perf.py  get_dependencies.py  get_mpi_info.F90  gplot  hdf5_interpolation_norms.py  hdf5_reduce_datasets.py  make_aug_eqdsk.py  makedep  mpi_threadlevel.F90  neoplot  nrgfilter  plot_autopar.py  plot_raw_slice.py  prof_chease.py  rc_chpt  rc_helios  rc_modpar  rc_overfl  rc_runassign  rc_submit  runassign  rundelete  runrename  runshift  runshift0  scanscript  summarize_probs.py  timestamp.c
(+1188 files in other folders)
