#add_subdirectory(combi_example)
#add_subdirectory(combi_example_faults)
#add_subdirectory(distributed_advection)
add_subdirectory(distributed_third_level)
#add_subdirectory(gene_distributed) # TODO: add if access to gene and selalib
#add_subdirectory(gene_distributed_linear)
#add_subdirectory(gene_distributed_third_level)
#add_subdirectory(selalib_distributed)