add_subdirectory(combi_example)
#add_subdirectory(combi_example_faults) # TODO: @polinta: this is not compiling
add_subdirectory(distributed_advection)
add_subdirectory(distributed_third_level)
#add_subdirectory(gene_distributed) # TODO: add if access to gene
#add_subdirectory(gene_distributed_linear) # TODO: add if access to gene
#add_subdirectory(gene_distributed_third_level) # TODO: add if access to gene
#add_subdirectory(selalib_distributed) # TODO: add if access to selalib